5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1753_1524.log
== TEST (2019-05-16 19:00:31) 
-- CODE:
x=float(input("Digite a quantidade incial :"))
y=float(input("Digite a quantidade de treinados "))
z=float(input("Digite" a quantidade de gilfos contaminados :"))
-- ERROR:
File "XXXX", line 3
    z=float(input("Digite" a quantidade de gilfos contaminados :"))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:03:24) 
-- CODE:
x=float(input("Digite a quantidade incial :"))
y=float(input("Digite a quantidade de treinados "))
z=float(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(n>0):
   n=(x+y)-z
	j=j+1

	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:03:30) 
-- CODE:
x=float(input("Digite a quantidade incial :"))
y=float(input("Digite a quantidade de treinados "))
z=float(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(n>0):
   n=(x+y)-z
	 j=j+1

	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:03:49) 
-- CODE:
x=float(input("Digite a quantidade incial :"))
y=float(input("Digite a quantidade de treinados "))
z=float(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(n>0):
	n=(x+y)-z
	j=j+1

	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:03:57) 
-- CODE:
x=float(input("Digite a quantidade incial :"))
y=float(input("Digite a quantidade de treinados "))
z=float(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(n>0):
	n=(x+y)-z
	j=j+1
print(j)
	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:04:47) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
if(x>0):
   while(n>0):
	   n=(x+y)-z
	   j=j+1
else:
	print(j)

	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:04:57) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
if(x>0):
   while(n>0):
	   n=(x+y)-z
	   j=j+1
else:
	print(j)

print(j)	

-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:52) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
if(x>0):
   while(n>0):
	   n=(x+y)-z
	   j=j+1
else:
	print(j)



-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:05:58) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
print(45)
if(x>0):
   while(n>0):
	   n=(x+y)-z
	   j=j+1
else:
	print(j)



-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:11) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
if(n>0):
   while(n>0):
	   n=(x+y)-z
	   j=j+1
else:
	print(j)



-- ERROR:
File "XXXX", line 8
    j=j+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:06:49) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(n>0):
	n=(x+y)-z
	j=j+1
	print(n)




-- OUTPUT:
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:25) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
print((x+y)-z)




-- OUTPUT:
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:00) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(x>0):
	x=x+y
	x=x-z
	j=j+1
print(j)	




-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:09:07) 
-- CODE:
x=int(input("Digite a quantidade incial :"))
y=int(input("Digite a quantidade de treinados "))
z=int(input("Digite a quantidad de guilfos contaminados: "))
n=x
j=0
while(x>0):
	x=x+y
	x=x-z
	j=j+1
print(j)	




-- EXECUTION TIME:
0.173449
-- TEST CASE 1:
---- input:
150
60
90
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
321
50
90
---- correct output:
9
---- user output:
9
-- TEST CASE 3:
---- input:
100
1
90
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
